--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "react-hook-form": "^7.54.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
