--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
