--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -22,6 +23,7 @@
     "daisyui": "^4.12.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "lodash": "^4.17.21",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-hook-form": "^7.54.2",
