--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.4",
     "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.23",
+    "daisyui": "^5.0.0-beta.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "lodash": "^4.17.21",
@@ -28,7 +29,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
 }
