--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
