--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "leaflet": "^1.9.4",
+    "@supabase/ssr": "^0.5.2",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
