--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
     "leaflet": "^1.9.4",
     "next": "15.1.6",
     "react": "^19.0.0-rc.1",
@@ -21,13 +22,13 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.23",
+    "daisyui": "^5.0.0-beta.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8",
+    "postcss": "^8.5.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-hook-form": "^7.54.2",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
